# server/openapi.yaml
@@ -3,9 +3,10 @@ openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Robot REST API
+  description: API for controlling robot cars
 
 servers:
-  - url: /api
+  - url: http://localhost:5000/api
 
 tags:
   - name: Input
@@ -56,9 +57,9 @@ paths:
                 $ref: "#/components/schemas/InputControl"
 
 
-  /input/steer:
+  /input/state:
     get:
-      summary: Get steering state
+      summary: Get axis state
       description: The current state of the WEB input steering
       operationId: input_get_state
       tags:
@@ -71,7 +72,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/InputState"
     put:
-      summary: Set steering state
+      summary: Set axis state
       description: Set the current state of the WEB input steering
       operationId: input_set_state
       tags:
@@ -369,7 +370,11 @@ components:
     InputControl:
       type: object
       properties:
-        source:
+        axis_source:
+          $ref: "#/components/schemas/InputSource"
+        kinematic_source:
+          $ref: "#/components/schemas/InputSource"
+        led_source:
           $ref: "#/components/schemas/InputSource"
 
     InputSource:
