# server/robot/api_input.py
@@ -18,10 +18,12 @@ logger = logging.getLogger(__name__)
 route = RouteTableDef()
 
 INPUT_PROPERTIES = frozenset([
-    "source"
+    "axis_source",
+    "kinematic_source",
+    "led_source"
 ])
 
-STATE_PROPERTIES = frozenset([
+SOURCE_PROPERTIES = frozenset([
     "steering",
     "throttle",
     "aux_x",
@@ -29,39 +31,32 @@ STATE_PROPERTIES = frozenset([
 ])
 
 
-@dataclass
-class InputState:
-    controller: str
-    steering: float
-    throttle: float
-    aux_x: float
-    aux_y: float 
-   
-def clamp(num, min, max):
-    return min if num < min else max if num > max else num
-
 def input2dict(input) -> dict:
     return {
-        "source": str(input.source),
+        "axis_source": str(input.axis_source),
+        "kinematic_source": str(input.kinematic_source),
+        "led_source": str(input.led_source),
     }
 
-def state2dict(state: InputState) -> dict:
-    return vars(state)
+def interface2dict(interface: InputInterface) -> dict:
+    return {
+        "steering": interface.steering,
+        "throttle": interface.throttle,
+        "aux_x": interface.aux_x,
+        "aux_y": interface.aux_y,
+    }
 
 def set_input_from_dict(input, json: dict):
     for key, value in json.items():
         if key in INPUT_PROPERTIES:
-            if key == "source":
+            if key in ["axis_source", "kinematic_source", "led_source"]:
                 value = to_enum(InputSource, value)
             setattr(input, key, value)
 
-def set_state_from_dict(iface: InputInterface, state: InputState, json: dict):
-    if "web" in json:
-        new_state = json["web"]
-        for key, value in new_state.items():
-            if key in STATE_PROPERTIES:
-                setattr(state, key, clamp(float(value), -1.0, 1.0))
-        iface.steer(state.steering, state.throttle, state.aux_x, state.aux_y)
+def set_state_from_dict(interface: InputInterface, json: dict):
+    for key, value in json.items():
+        if key in SOURCE_PROPERTIES:
+            setattr(interface, key, value)
 
 
 @route.get("")
@@ -84,22 +79,19 @@ async def animations(request: Request) -> Response:
     return json_response([ str(v) for k,v in InputSource.values.items()])
 
 
-@route.get("/steer")
+@route.get("/state")
 async def steer(request: Request) -> Response:
-    state = request.config_dict["state"]
-    return json_response(state2dict(state))
+    robot = request.config_dict["robot"]
+    return json_response(interface2dict(robot.input.web))
 
 
-@route.put("/steer")
+@route.put("/state")
 async def put(request: Request) -> Response:
     robot = request.config_dict["robot"]
-    state = request.config_dict["state"]
+    interface = robot.input.web
     json = await json_request(request)
-    if state.controller is None:
-        # Only set state if no one is controlling from web socket
-        set_state_from_dict(robot.input.web, state, json)
-        request.app["ns"].notify_state()
-    return json_response(input2dict(input, state))
+    set_state_from_dict(interface, json)
+    return json_response(interface2dict(interface))
 
 
 
@@ -108,15 +100,9 @@ class InputWatch(SubscriptionWatch):
         return input2dict(self.target)
 
 
-class InputStateWatch(Watch):
-    UPDATE_GRACE_PERIOD = 0.2
-
+class InputStateWatch(SubscriptionWatch):
     def data(self):
-        return state2dict(self.owner.input_state)
-
-    async def emit(self):
-        await self.owner.emit(self.name, data=self.data(), room=self.name)
-        await asyncio.sleep(self.UPDATE_GRACE_PERIOD)
+        return interface2dict(self.target)
 
 
 class InputNamespace(WatchableNamespace):
@@ -125,31 +111,16 @@ class InputNamespace(WatchableNamespace):
     def __init__(self, app: Application):
         super().__init__(logger=logger)
         self.app = app
-        self.web_source = None
-        self.input = None
-        self.watch = None
-        self.state_watch = None
-        self.input_state = None
 
     async def app_started(self):
         robot = self.app["root"]["robot"]
-        self.input_state = self.app["state"]
-        self.watch = InputWatch(self, robot.input)
-        self.state_watch = InputStateWatch(self, "update_state")
-        self.web_source = robot.input.web
         await self._init_watches([
-            self.watch,
-            self.state_watch,
+            InputWatch(self, robot.input),
+            InputStateWatch(self, robot.input.web, "update_state")
         ])
 
     async def app_cleanup(self):
         await self._destroy_watches()
-        self.input_state = None
-        self.watch = None
-        self.state_watch = None
-
-    def notify_state(self):
-        self.state_watch.notify()
 
 
     # 
@@ -165,30 +136,30 @@ class InputNamespace(WatchableNamespace):
         logger.info(f"Input disconnect  sid={sid}")
         async with self.session(sid) as session:
             await self._destroy_session(session)
-        if self.input_state.controller == sid:
-            self.input_state.controller = None
-            self.notify_state()
+        #if self.input_state.controller == sid:
+        #    self.input_state.controller = None
+        #    self.notify_state()
 
-    async def on_take_control(self, sid):
-        logger.info(f"Take control {sid}")
-        if self.input_state.controller != sid:
-            self.input_state.controller = sid
-            self.notify_state()
-        return state2dict(self.input_state)
+    #async def on_take_control(self, sid):
+    #    logger.info(f"Take control {sid}")
+    #    if self.input_state.controller != sid:
+    #        self.input_state.controller = sid
+    #        self.notify_state()
+    #    return state2dict(self.input_state)
 
-    async def on_release_control(self, sid):
-        logger.info(f"Release control {sid}")
-        if self.input_state.controller == sid:
-            self.input_state.controller = None
-            self.notify_state()
-        return state2dict(self.input_state)
+    #async def on_release_control(self, sid):
+    #    logger.info(f"Release control {sid}")
+    #    if self.input_state.controller == sid:
+    #        self.input_state.controller = None
+    #        self.notify_state()
+    #    return state2dict(self.input_state)
 
-    async def on_steer(self, sid, data):
-        logger.info(f"Steer {sid} {data}")
-        if self.input_state.controller == sid:
-            set_state_from_dict(self.web_source, self.input_state, data)
-            self.notify_state()
-        return state2dict(self.input_state)
+    #async def on_steer(self, sid, data):
+    #    logger.info(f"Steer {sid} {data}")
+    #    if self.input_state.controller == sid:
+    #        set_state_from_dict(self.web_source, self.input_state, data)
+    #        self.notify_state()
+    #    return state2dict(self.input_state)
 
 
 
@@ -196,9 +167,6 @@ class InputNamespace(WatchableNamespace):
 
 async def app_on_startup(app: Application):
     logger.info("Startup")
-
-    app["state"] = InputState(controller=None, steering=0.0, throttle=0.0, aux_x=0.0, aux_y=0.0)
-
     ns = app["ns"]
     await ns.app_started()
 
